brain/sources/prod-metadata/objects/CandidateTrainingStep__c/CandidateTrainingStep__c.object-meta.xml
<CustomObject>
    <label>Candidate Training Step</label>
    <nameField>
        <label>Candidate Training Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Training Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>