brain/sources/prod-metadata/objects/CandidateTrainingStep__c/fields/Assigned_Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Trainer_Name__c</fullName>
    <formula>Assigned_Trainer_User__r.FirstName &amp;&quot; &quot;&amp; Assigned_Trainer_User__r.MiddleName &amp;&quot; &quot;&amp; Assigned_Trainer_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Trainer Name</label>
    <type>Text</type>
</CustomField>