brain/sources/prod-metadata/objects/CandidateTrainingStep__c/fields/Candidate_Training__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Training__c</fullName>
    <label>Candidate Training</label>
    <referenceTo>Candidate_Training__c</referenceTo>
    <relationshipLabel>Candidate Training Steps</relationshipLabel>
    <relationshipName>Candidate_Training_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>