brain/sources/prod-metadata/objects/CandidateTrainingStep__c/fields/Due_At__c.field-meta.xml
<CustomField>
    <fullName>Due_At__c</fullName>
    <label>Due At</label>
    <type>DateTime</type>
</CustomField>