brain/sources/prod-metadata/objects/CandidateTrainingStep__c/fields/Expected_Duration__c.field-meta.xml
<CustomField>
    <fullName>Expected_Duration__c</fullName>
    <label>Expected Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>