brain/sources/prod-metadata/objects/CandidateTrainingStep__c/fields/Learning_Goal__c.field-meta.xml
<CustomField>
    <fullName>Learning_Goal__c</fullName>
    <label>Learning Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>