brain/sources/prod-metadata/objects/CandidateTrainingStep__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>