brain/sources/prod-metadata/objects/CandidateTrainingStep__c/fields/Step_Template__c.field-meta.xml
<CustomField>
    <fullName>Step_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step Template</label>
    <referenceTo>StepTemplate__c</referenceTo>
    <relationshipLabel>Candidate Training Steps</relationshipLabel>
    <relationshipName>Candidate_Training_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>