brain/sources/prod-metadata/objects/CandidateTrainingStep__c/fields/Training_Step__c.field-meta.xml
<CustomField>
    <fullName>Training_Step__c</fullName>
    <label>Training Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>